Fix input content is too long

--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,8 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+        "Open Sans", "Helvetica Neue", sans-serif;
     background: #1a261a;
     color: #fff;
 }
@@ -89,6 +88,8 @@ main {
 
 .task-title {
     flex: 1;
+    margin-right: 20px;
+    word-break: break-word;
 }
 
 .task-action {
